# barudb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  compare-with-sota.md  compression_test.rs  fence_pointers_fastlanes.md  reactor-pattern.md  reset_db.sh  run_server_tests.sh  run_tests.sh
benches/: block_cache_bench.rs  bloom_bench.rs  compressed_fence_bench.rs  compression_bench.rs  dynamic_bloom_bench.rs  eytzinger_fence_bench.rs  fastlane_bench.rs  fence_bench.rs  leveldb_comparison.rs  lmdb_comparison.rs  lock_free_bench.rs  optimal_config_benchmark.rs  rocksdb_comparison.rs  storage_bench.rs  terarkdb_comparison.rs  wiredtiger_comparison.rs
docs/: README.md  adaptive_fastlane_fence_pointers.md  bit-packing-compression.md  block-cache-optimization-plan.md  block_cache_ttl_priority.md  bloom.md  bloom_fastlanes.md  bloom_filters.md  compaction_policies.md  compression.md  deep-research.md  demo.md  eytzinger.md  faq.md  fence_pointers.md  fence_pointers_fastlanes.md  fine-grain-locking.md  io-batching.md  lock-free-data-structures.md  lock_free_memtable.md  reliable-recovery.md  storage_comparison.md  tombstone-issue.md
final_report/: final-report-updated.md  final-report.md  final_report.md
final_report/benchmarks/: README.md  benchmark_results.md  bloom_bench_processed.csv  bloom_bench_raw_20250503_213639.txt  bloom_bench_raw_20250503_214957.txt  convert_architecture.sh  create_sota_comparison_charts.py  create_write_performance_chart.py  fence_bench_range_sizes_20250503_214953.csv  fence_bench_range_sizes_latest.csv  fence_bench_range_sizes_sample.csv  fence_bench_raw_latest.txt  fence_bench_results_20250503_214953.csv  fence_bench_results_latest.csv  fence_bench_results_sample.csv  fence_bench_scaling_20250504_085805.csv  fence_bench_scaling_latest.csv  fence_bench_scaling_sample.csv  fence_results_summary.csv  pyproject.toml  run_bloom_bench.sh  run_fence_bench.sh  visualize_benchmarks.py
final_report/diagrams/: architecture.mmd  block_cache_sequence.mmd  bloom_filter.mmd  compaction_sequence.mmd  compaction_strategies.mmd  compression.mmd  double_probe_bloom_sequence.mmd  eytzinger_layout_sequence.mmd  fence_pointer.mmd  get_operation_sequence.mmd  lazy_leveled_compaction.mmd  level0_handling.mmd  leveled_compaction.mmd  lock_free_memtable_sequence.mmd  partial_compaction.mmd  put_operation_sequence.mmd  range_query_sequence.mmd  recovery_sequence.mmd  system_architecture.mmd  system_architecture_correct.mmd  system_architecture_no_style.mmd  system_architecture_refined.mmd  system_architecture_simplified.mmd  test_minimal.mmd  tiered_compaction.mmd
final_report/figures/: README.md
final_report/images/: architecture.txt  eytzinger_layout.mmd  fastlane_fence_pointer.mmd
final_report/notebooks/: bloom_filter_analysis.ipynb  fence_pointer_analysis.ipynb
generator/: README.md  benchmark_workload.txt  pyproject.toml  test_workload.txt
midway_report/: midway-report.md
sota/: README.md  analyze_benchmarks.py  benchmark_leveldb.sh  benchmark_lmdb.sh  benchmark_lsm_vs_lmdb.sh  benchmark_speedb.sh  benchmark_summary.md  benchmark_terarkdb.sh  benchmark_wiredtiger.sh  build_wiredtiger.sh  compare-with-sota.md  compare_results.py  comparison_results.md  install_leveldb_deps.sh  install_lmdb_deps.sh  install_rocksdb_deps.sh  install_terarkdb_deps.sh  install_wiredtiger_deps.sh  leveldb_comparison_results.csv  lmdb_comparison_results.csv  optimal_configuration.md  pyproject.toml  rocksdb_comparison_results.csv  run_all_benchmarks.sh  run_analysis.sh  running_the_benchmarks.md  sota_benchmark_summary.md  speedb_comparison_results.csv  terarkdb_bench.cpp  wiredtiger_bench.c
sota/benchmark_results/: lmdb_comparison_results.csv  terarkdb_comparison_results.csv  wiredtiger_comparison_results.csv
sota/visualizations/: speedup_report.csv
src/: command.rs  level.rs  lib.rs  lock_free_memtable.rs  lsm_tree.rs  memtable.rs  test_helpers.rs  types.rs
src/bloom/: mod.rs  rocks_db.rs  speed_db.rs
src/compaction/: lazy_leveled.rs  leveled.rs  mod.rs  partial_tiered.rs  tiered.rs
src/run/: adaptive_fastlane.rs  block.rs  block_cache.rs  compressed_fence.rs  compression.rs  eytzinger_layout.rs  fastlane_fence.rs  fastlane_fence.rs.bak  fence.rs  filter.rs  lock_free_block_cache.rs  lsf.rs  mod.rs  standard_fence.rs  storage.rs  two_level_fence.rs
src/run/cache_policies/: lru.rs  mod.rs  tests.rs  tiny_lfu.rs
src/run/compression/: bit_pack.rs  delta.rs  dictionary.rs  lz4.rs  mod.rs  noop.rs  snappy.rs
src/run/lock_free_cache_policies/: lru.rs  mod.rs  priority_lfu.rs  tiny_lfu.rs  tiny_lfu_ttl.rs
tests/: adaptive_fastlane_diagnostic_test.rs  block_cache_test.rs  compaction_integration_test.rs  compaction_policy_test.rs  compressed_fence_test.rs  compression_comparison_test.rs  compression_test.rs  fastlane_accuracy_test.rs  fastlane_fence_test.rs  fastlane_index_test.rs  fastlane_million_test.rs  fastlane_test.rs  fastlane_v2_test.rs  fence_pointer_bench_test.rs  integration_test.rs  lmdb_test.rs  lsf_storage_test.rs  lsm_tree_compaction_test.rs  partial_compaction_test.rs  recovery_reliability_test.rs  run_storage_test.rs  server_commands_test.rs  storage_comparison_test.rs  workload_test.rs
