[package]
name = "lsm-tree"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
libc = "0.2.169"
page_size = "0.6.0"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.29"
rand = "0.8"
once_cell = "1.8"
xxhash-rust = {  version = "0.8.15", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tempfile = "3.8"  # For the benchmark binary
lz4 = "1.24.0"    # LZ4 compression algorithm
snap = "1.1.0"    # Snappy compression algorithm
crossbeam-skiplist = "0.1.3"  # Lock-free skiplist map for concurrent data structures
crossbeam-utils = "0.8.19"    # Additional utilities for lock-free implementations
parking_lot = "0.12.1"        # More efficient mutex and rwlock alternatives

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
fastbloom = "0.8.0"
rand = "0.8.5"
tempfile = "3.8"
env_logger = "0.10.1"
serial_test = "2.0.0"

[[bench]]
name = "bloom_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "block_cache_bench"
harness = false

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "lock_free_bench"
harness = false

[[bench]]
name = "dynamic_bloom_bench"
harness = false

