[package]
name = "lsm-tree"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
page_size = "0.6.0"
tokio = { version = "1", features = ["full"] }
rand = "0.9.1"
once_cell = "1.8"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tempfile = "3.8"  # For the benchmark binary
lz4 = "1.24.0"    # LZ4 compression algorithm
snap = "1.1.0"    # Snappy compression algorithm
crossbeam-skiplist = "0.1.3"  # Lock-free skiplist map for concurrent data structures

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
fastbloom = "0.9.0"
rand = "0.9.1"
tempfile = "3.8"
env_logger = "0.11.8"
serial_test = "3.2.0"

[[bench]]
name = "bloom_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "block_cache_bench"
harness = false

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "lock_free_bench"
harness = false

[[bench]]
name = "dynamic_bloom_bench"
harness = false

