[package]
name = "barudb"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
lmdb-rkv = { version = "0.14.0", optional = true }
page_size = "0.6.0"
tokio = { version = "1", features = ["full"] }
rand = "0.9.1"
once_cell = "1.8"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tempfile = "3.8"  # For the benchmark binary
lz4 = "1.24.0"    # LZ4 compression algorithm
snap = "1.1.0"    # Snappy compression algorithm
crossbeam-skiplist = "0.1.3"  # Lock-free skiplist map for concurrent data structures
wide = "0.7.32"   # SIMD operations for Bloom filter optimization
lmdb = { version = "0.8.0", optional = true }  # LMDB database
leveldb = { version = "0.8.6", optional = true }  # LevelDB database
wiredtiger-sys = { version = "0.10.0-rc0", optional = true } # WiredTiger database

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
fastbloom = "0.9.0"
rand = { version = "0.9.1", features = ["std_rng", "small_rng"] }
rand_distr = "0.4.3"  # For Zipf distribution in benchmarks
tempfile = "3.8"
env_logger = "0.11.8"
serial_test = "3.2.0"
csv = "1.2.2"
fastrand = "2.0.1"
rayon = "1.9.0"  # For parallel benchmarks

# RocksDB is commented out as it requires system dependencies
# Uncomment this line when ready to run RocksDB comparisons
rocksdb = "0.21.0"

# Features for conditional compilation
[features]
use_lmdb = ["dep:lmdb"]
use_leveldb = ["dep:leveldb"]
# Enable this feature when system dependencies for RocksDB are installed
use_rocksdb = []
use_wiredtiger = ["dep:wiredtiger-sys"]
use_terarkdb = []

[[bench]]
name = "bloom_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "block_cache_bench"
harness = false

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "lock_free_bench"
harness = false

[[bench]]
name = "dynamic_bloom_bench"
harness = false

[[bench]]
name = "rocksdb_comparison"
harness = false

[[bench]]
name = "lmdb_comparison"
harness = false

[[bench]]
name = "leveldb_comparison"
harness = false

[[bench]]
name = "wiredtiger_comparison"
harness = false

[[bench]]
name = "terarkdb_comparison"
harness = false
