[project]
name = "generator"
version = "0.1.0"
description = "Workload generator for an LSM tree"
authors = [
    {name = "Brian Sam-Bodden",email = "bsb@redis.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sortedcontainers (>=2.4.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
